@@ -1,6 +1,5 @@
 # Kernel for Debian GNU/kFreeBSD on an i486 machine
 
-include		GENERIC
 cpu		I486_CPU
 cpu		I586_CPU
 cpu		I686_CPU
@@ -11,3 +10,6 @@ ident		Debian-i486
 options 	XBOX
 device		xboxfb
 device		fb
+
+
+#include		GENERIC
