@@ -1,9 +1,11 @@
 # Kernel for Debian GNU/kFreeBSD on an i686 SMP machine
 
-include		GENERIC
 cpu		I686_CPU
 makeoptions	COPTFLAGS="-O2 -frename-registers -pipe -march=i686 -mtune=default"
 ident		Debian-i686-SMP
 
 options		SMP		# Symmetric MultiProcessor Kernel
 options		ALTQ_NOPCC	# Required for SMP build
+
+
+#include		GENERIC
