@@ -1,6 +1,5 @@
 # Kernel for Debian GNU/kFreeBSD on an i686 machine
 
-include		GENERIC
 cpu		I686_CPU
 makeoptions	COPTFLAGS="-O2 -frename-registers -pipe -march=i686 -mtune=default"
 ident		Debian-i686
@@ -9,3 +8,6 @@ ident		Debian-i686
 options 	XBOX
 device		xboxfb
 device		fb
+
+
+#include		GENERIC
