@@ -8,6 +8,7 @@ kfreebsd-7 (7.1~cvs20080717-1) EXPERIMENTAL; urgency=low
   * Reduce number of kernel-image flavours
   * Reenable ums driver in GENERIC
   * Do not specify SMP in GENERIC, it is enabled on per flavour basis
+  * Ship config file used for building corresponding flavour
   * libdb-dev is now a real package, build-depend only on it.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 17 Jul 2008 11:11:11 +0200
